package com.g4.odontohub.agendamento.domain.model;

public record DentistaId(Long id) {}