package com.g4.odontohub.agendamento.domain.model;

public record PacienteId(Long id) {}