package com.g4.odontohub.agendamento.domain.model;

public enum StatusAgendamento {
    AGENDADO, CONFIRMADO, CANCELADO, REMARCADO
}