package com.g4.odontohub.agendamento.domain.model;

public enum TipoAtendimento {
    CONSULTA, RETORNO
}